--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/nums.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memory Game</title>
+    <title>Memory Game on React v.1</title>
 </head>
 
 <body>
+    <h1>Memory Game on React v.1</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
